Fixed typos and made comments clearer

--- a/notebooks/Naive Bayes.ipynb
+++ b/notebooks/Naive Bayes.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "### ***Theory of Gaussian Naive Bayes***\n",
     "\n",
-    "Applying Naive Bayes on a dataset means estimating $f: X \\rightarrow Y$ or equivalently $P\\{Y|X\\}$ where $Y$ is a boolean random variable and $X$ is a vector containg the attributes. By applying Bayes rule, we see that we can express $P\\{Y=y_i|X=x_i\\}$ as the following:\n",
+    "Applying Naive Bayes on a dataset means estimating $f: X \\rightarrow Y$, or equivalently $P\\{Y|X\\}$, where $Y$ is a random variable and $X$ is a vector containing the attributes. By applying Bayes rule, we see that we can express $P\\{Y=y_i|X=x_i\\}$ as the following:\n",
     "$$P\\{Y=y_i|X=x_k\\}=\\frac{P\\{X=x_k|Y=y_i\\}\\cdot P\\{Y=y_i\\}}{\\sum_jP\\{X=x_k|Y=y_j\\}\\cdot P\\{Y=y_j\\}}$$\n",
-    "where $y_i$ denotes the $i\\text{-th}$ possible value of $Y$ and $x_k$ denotes the $k\\text{-th}$ possible vector value for $X$. One way to learn $P\\{Y|X\\}$ is to use the training data to estimate $P\\{X|Y\\}$ and $P\\{Y\\}$: we can then employ them, togheter with Bayes rule above, to determine $P\\{Y|X=x_k\\}$ for any new instance $x_k$. A classifier like this will output the probability distribution over all possible values of $Y$ for each new instance $X$ that we ask it to classify. As in DT and RF, there is no need to be perform standardization: it's internally done by the method.\n",
+    "where $y_i$ denotes the $i\\text{-th}$ possible value of $Y$ and $x_k$ denotes the $k\\text{-th}$ possible vector value for $X$. One way to learn $P\\{Y|X\\}$ is to use the training data to estimate $P\\{X|Y\\}$ and $P\\{Y\\}$: we can then employ them, together with Bayes rule above, to determine $P\\{Y|X=x_k\\}$ for any new instance $x_k$. A classifier like this will output the probability distribution over all possible values of $Y$ for each new instance $X$ that we ask it to classify. As in DT and RF, there is no need to be perform standardization: it's internally done by the method.\n",
     "\n",
-    "Using a Bayes classifier to accurately estimate $P\\{X|Y\\}$ typically requires a lot of training examples. To overcome this problem, Naive Bayes classifiers assumes that each $X_i$ is conditionally independent of each of the others $X_k$ given the label $Y$ and also independent of each subset of the others $X_k$ given $Y$. Given three sets of random variable $X$, $Y$ and $Z$, we say that $X$ is conditionally independent of $Y$ given $Z$, if and only if the probability ditribution governing $X$ is independent of the value of $Y$ given $Z$; that is:\n",
+    "Using a Bayes classifier to accurately estimate $P\\{X|Y\\}$ typically requires a lot of training examples. To overcome this problem, Naive Bayes classifiers assumes that each $X_i$ is conditionally independent of each of the others $X_k$ given the label $Y$ and also independent of each subset of the others $X_k$ given $Y$. Given three sets of random variable $X$, $Y$ and $Z$, we say that $X$ is conditionally independent of $Y$ given $Z$, if and only if the probability distribution governing $X$ is independent of the value of $Y$ given $Z$; that is:\n",
     "$$P\\{X=x_i|Y=y_j, Z=z_k\\}=P\\{X=x_i|Z=z_k\\} \\,\\,\\,\\,\\, \\forall i, j, k$$\n",
+    "\n",
+    "Conditional independence assumptions hold in our dataset since the correlation of all possible pairs of features is almost zero, except for `Amount` and `Time`. It's possible to apply PCA again to have a perfectly independent set of features.\n",
     "\n",
     "With this hypothesis, we can write $P\\{X|Y\\}$ like:\n",
     "$$P\\{X|Y\\}=P\\{X_1, X_2, \\dots, X_n|Y\\}=\\frac{P\\{X_1, \\dots,X_n\\}}{P\\{Y\\}}=\\frac{P\\{X_1, \\dots, X_n, Y\\}}{P\\{X_2, \\dots, Y\\}}\\cdot \\frac{P\\{X_2, \\dots, X_n, Y\\}}{P\\{Y\\}}=\n",
@@ -28,21 +30,21 @@
     "where the sum is taken over all possible values $y_j$ os $Y$. By what have been previously said about conditional independence, we can rewrite the expression as:\n",
     "$$P\\{Y=y_k|X_1,\\dots,X_n\\}=\\frac{P\\{Y=y_k\\}\\cdot \\prod_i P\\{X_i|Y=y_k\\}}{\\sum_j P\\{Y=y_j\\}\\cdot \\prod_i P\\{X_i|Y=y_i\\}}$$\n",
     "\n",
-    "that is the foundamental equation for the Naive Bayes classifier; $P\\{Y\\}$ (the prior) and $P\\{X_i|Y\\}$ (the likehood) have been already estimated. \n",
+    "that is the fundamental equation for the Naive Bayes classifier; $P\\{Y\\}$ (the prior) and $P\\{X_i|Y\\}$ (the likelihood) have been already estimated. \n",
     "\n",
     "If we are interested in only the most probable value of $Y$, then we have the Naive Bayes classification rule:\n",
-    "$$Y= \\argmax_{y_k}\\frac{P\\{Y=y_k\\}\\cdot \\prod_i P\\{X_i|Y=y_k\\}}{\\sum_j P\\{Y=y_j\\}\\cdot \\prod_i P\\{X_i|Y=y_i\\}}$$\n",
+    "$$Y= \\arg\\max_{y_k}\\frac{P\\{Y=y_k\\}\\cdot \\prod_i P\\{X_i|Y=y_k\\}}{\\sum_j P\\{Y=y_j\\}\\cdot \\prod_i P\\{X_i|Y=y_i\\}}$$\n",
     "\n",
     "Noticing that the denominator doesn't depend on $y_k$, we can get rid of it and write:\n",
-    "$$Y= \\argmax_{y_k}\\,\\,P\\{Y=y_k\\}\\cdot \\prod_i P\\{X_i|Y=y_k\\}$$\n",
+    "$$Y= \\arg\\max_{y_k}\\,\\,P\\{Y=y_k\\}\\cdot \\prod_i P\\{X_i|Y=y_k\\}$$\n",
     "\n",
     "---\n",
     "\n",
-    "All of the features in our samples $X$ are continuous, so we need a way to represent the distributions of $P\\{X_i|Y\\}$. One common approach is to assume that for each possible discrete value $y_k$ of $Y$, the distribution of each continuous $X_i$ is Gaussian defined by mean and standard deviation specific to $X_i$ and $y_k$.  Such parameters can be estimated using conditional expected value:\n",
+    "All of the features in our samples $X$ are continuous, so we need a way to represent the distributions of $P\\{X_i|Y\\}$. One common approach is to assume that for each possible discrete value $y_k$ of $Y$, the distribution of each continuous $X_i$ is Gaussian defined by mean and standard deviation specific to $X_i$ and $y_k$.  Such parameters can be estimated using conditional expected values:\n",
     "$$\\mu_{i,k}=\\mathbb{E}[X_i|Y=y_k]\\,\\,\\,\\,\\,\\,\\,\\, \\sigma_{i,k}^2=\\mathbb{E}[(X_i-\\mu_{i,k})^2|Y=y_k]$$\n",
     "\n",
     "for each feature $X_i$ and possible label $y_k$ of $Y$. This means that there are $2|Y|n$ of this parameters and each of them has to be estimated independently. Among many estimators, the ones used in this notebook are the following:\n",
-    "1. MLE (Maximum Likehood Estimator) for the mean:\n",
+    "1. MLE (Maximum Likelihood Estimator) for the mean:\n",
     "$$\\hat \\mu_{i,k}=\\frac{1}{\\sum_j \\mathbb{I}\\{Y_j=y_k\\}}\\cdot\\sum_j X_{i, j}\\cdot\\mathbb{I}\\{Y_j=y_k\\}$$\n",
     "\n",
     "that is nothing more than the mean of $X_{i, j}$.\n",
@@ -55,7 +57,7 @@
     "3. MVUE (Minimum Variance Unbiased Estimator):\n",
     "$$\\hat \\sigma_{i, k}^2=\\frac{1}{\\left(\\sum_j \\mathbb{I}\\{Y_j=y_k\\}\\right) - 1}\\cdot\\sum_j (X_{i, j}-\\hat \\mu_{i, k})^2\\cdot\\mathbb{I}\\{Y_j=y_k\\}$$\n",
     "\n",
-    "where $Y_j$ means the label and $X_{i, j}$ means the value of $i\\text{-th}$ feature of $j\\text{-th}$ traing sample.\n",
+    "where $Y_j$ means the label and $X_{i, j}$ means the value of $i\\text{-th}$ feature of $j\\text{-th}$ training sample.\n",
     "\n",
     "Also, priors $\\pi_k=P\\{Y=y_k\\}$ have to be estimated:\n",
     "$$\\hat \\pi_k=\\frac{\\sum_j \\mathbb{I}\\{Y_j=y_k\\}}{n}$$"
@@ -87,12 +89,12 @@
     "class GaussianNaiveBayes:\n",
     "    def __init__(self, classes):\n",
     "        \"\"\"\n",
-    "            Initializes the Naive Bayes classifer parameters.\n",
+    "            Initializes the Naive Bayes classifier parameters.\n",
     "\n",
     "            Args:\n",
     "                classes (list): the classes the data is classified in.\n",
-    "                                Note: this paramter can be removed and its usages eplaced with [0, 1], but since\n",
-    "                                NB can be used for multiclass problems, it seems reasoneable to us keeping it. \n",
+    "                                Note: this parameter can be removed and its usages replaced with [0, 1], but since\n",
+    "                                NB can be used for multi-class problems, it seems reasonable to us keeping it. \n",
     "        \"\"\"\n",
     "\n",
     "        self.classes = classes\n",
@@ -101,7 +103,7 @@
     "        self.priors = None\n",
     "\n",
     "        #Each value will be an array of len(features) (the columns of X passed to self.fit())\n",
-    "        #containing the mean and the variance of Gaussian distribution associated to (y_k, X_i) as defined in tthe theory part\n",
+    "        #containing the mean and the variance of Gaussian distribution associated to (y_k, X_i) as defined in the theory part\n",
     "        self.means = None\n",
     "        self.variances = None\n",
     "    \n",
@@ -110,7 +112,7 @@
     "            This methods fits NB to the training data.\n",
     "\n",
     "            Args:\n",
-    "                X (np.ndarray): the matrix containg the training samples (on the rows).\n",
+    "                X (np.ndarray): the matrix containing the training samples (on the rows).\n",
     "                y (np.ndarray): the vector with the labels.\n",
     "        \"\"\"\n",
     "\n",
@@ -130,60 +132,58 @@
     "            X_c = X[y == c]\n",
     "            self.means[c] = np.mean(X_c, axis = 0)\n",
     "\n",
-    "            #Note: here we could have used the NumPy built-in command for the variance estimation\n",
-    "            #np.var(X_c, axis = 0, ddof = 1) where ddof = 1 means that at the denominator we want a -1\n",
-    "            #to get an unbiased estimator\n",
-    "            #Note: 1e-9 * max_var is a smothing paramter useful when variances have different scales (like Time and the Vs)\n",
+    "            #Note: here we could have used the NumPy built-in command for the variance estimation:\n",
+    "            #np.var(X_c, axis = 0, ddof = 1) where ddof = 1 means that at the denominator we want len(X_c) - 1\n",
+    "            #to get an unbiased estimator.\n",
+    "            #Note: 1e-9 * max_var is a smoothing parameter useful when variances have different scales (like Time and the Vs)\n",
     "            self.variances[c] = np.sum((X_c - self.means[c]) ** 2, axis = 0) / (len(X_c) - 1) + 1e-9 * max_var\n",
     "\n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
-    "            This method makes prediction on new data.\n",
+    "            This method makes predictions on new data.\n",
     "\n",
     "            Args:\n",
-    "                X (np.ndarray): the matrix containg the samples to predict (on the rows).\n",
+    "                X (np.ndarray): the matrix containing the samples to predict (on the rows).\n",
     "\n",
     "            Returns:\n",
     "                predictions (np.ndarray): the array containing the predicted class.\n",
-    "                probabilties (np.ndarray): the probability associated to the prediction.\n",
+    "                probabilities (np.ndarray): the probability associated to the prediction\n",
     "        \"\"\"\n",
     "\n",
     "        if self.means == None or self.variances == None:\n",
     "            raise ValueError(\"NB classifier has not been trained yet.\")\n",
     "        \n",
-    "        #Posterior given by P{Y = y_k | X}, so we represent it in a matrix form where each row corresponds to a sample and \n",
+    "        #Posterior is given by P{Y = y_k | X}, so we represent it in a matrix form where each row corresponds to a sample and \n",
     "        #each column corresponds the probability of a class y_k. \n",
     "        #Note: in the case of binary classification, we can reduce this matrix to a vector. For the sake of generality, we keep this form. \n",
     "        posteriors = np.empty((X.shape[0], len(self.classes)))\n",
     "        \n",
     "        for i, c in enumerate(self.classes):\n",
-    "            #Both priors and likehoods can be really small numbers, so we'll work using the log \n",
+    "            #Both priors and likelihoods can be really small numbers, so we'll work using the log \n",
     "            prior = np.log(self.priors[c])\n",
     "\n",
-    "            #For the likhood, we have to compute log(*) = log(density(X, self.means[c], self.variances[c])) where\n",
+    "            #For the likelihood, we have to compute log(*) = log(density(X, self.means[c], self.variances[c])) where\n",
     "            #\"density\" is the Gaussian PDF, so by log(ab) = log(a) * log(b):\n",
     "            #log(*) = log(1 / np.sqrt(2 * np.pi * self.variances[c] + 1e-8)) * log(np.exp((X - self.means[c]) ** 2 / (2 * self.variances[c] + 1e-8))) =\n",
     "            #       = -1 / 2 * np.log(2 * np.pi * self.variances[c] + 1e-8) - (X - self.means[c]) ** 2 / (2 * self.variances[c] + 1e-8)\n",
     "            likelihood = np.sum(-0.5 * np.log(2 * np.pi * self.variances[c] + 1e-8) - (X - self.means[c]) ** 2 / (2 * self.variances[c] + 1e-8), axis = 1)\n",
     "\n",
-    "            #Finally, we store the log of the poterior in the matrix. \n",
-    "            #Note: we are saving one entire column at the time because we'are working column by column. \"prior\" is a single number, but \"likehood\" is a vector\n",
+    "            #Finally, we store the log of the posterior in the matrix. \n",
+    "            #Note: we are saving one entire column at the time because we'are working column by column. \"prior\" is a single number, but \"likelihood\" is a vector\n",
     "            #corresponding to the density evaluated in the sample\n",
     "            posteriors[:, i] = prior + likelihood\n",
     "        \n",
-    "        #To get probabilities, we must first compute the exponential and then normalize\n",
-    "        #In the same way as before, this operation is done column by column (axis = 1)\n",
-    "        #Note: keepdims = True is required becuse otherwise np.sum() would produce a row vector and \n",
-    "        #the division of a column vector with a row vectors gives a matrix because of brodcasting\n",
-    "        \n",
-    "        #Since probabilities can be very small, we use log-sum-exp trick for numerical stability\n",
-    "        #First, find the maximum value for each row\n",
+    "        #Since probabilities can be very small (because we're working with log the numbers will be far negative), we use log-sum-exp trick for numerical stability\n",
+    "        #First, find the maximum value for each row: this will be then converted to 1 when we'll take the exp\n",
     "        max_posteriors = np.max(posteriors, axis = 1, keepdims = True)\n",
     "        \n",
-    "        #The, subtract the maximum from each value and exp\n",
+    "        #Then, subtract the maximum from each value and exp: all the resulting numbers will be less then (or equal to) 1 because posteriors - max_posteriors <= 0\n",
+    "        #To get the real probabilities, this numbers need to be rescaled by e^(-max_posteriors)\n",
     "        exp_posteriors = np.exp(posteriors - max_posteriors)\n",
     "        \n",
-    "        #Normalize to get probabilities\n",
+    "        #Finally, normalize to get probabilities.\n",
+    "        #What we are computing here is e^(posteriors - max_posteriors) / sum(e^(posteriors - max_posteriors))) = e^(posteriors) / sum(e^(posteriors)) that is the \n",
+    "        #probability we're interested in, but without risking underflow!\n",
     "        probs = exp_posteriors / np.sum(exp_posteriors, axis = 1, keepdims = True)\n",
     "\n",
     "        #The predicted class is the one with highest probability (see theory)\n",
@@ -191,11 +191,11 @@
     "    \n",
     "    def plot_gaussian_pdfs(self, feature_names, n_cols = 1):\n",
     "        \"\"\"\n",
-    "            Utility method to plot the probability density function asscoaited to each class and features.\n",
-    "            PDFs of same feature will be displayed on the same plot. Plots will be displayed \n",
+    "            Utility method to plot the probability density function associated to each class and features.\n",
+    "            PDFs of same feature will be displayed on the same plot.\n",
     "\n",
     "            Args:\n",
-    "                feature_name (list): the names to be assigned to the features. This list should have contain only\n",
+    "                feature_name (list): the names to be assigned to the features. This list should contain only\n",
     "                                     the features used for training in that order.\n",
     "                n_cols (tuple): specifies how many plots to be displayed on each row\n",
     "        \"\"\"\n",
@@ -210,11 +210,11 @@
     "                #This is a definition used only to avoid to repeat in the code a lot of times self.classes[k] given that the dicts are indexed by class\n",
     "                c = self.classes[k]\n",
     "\n",
-    "                #Use a sufficently large range for the x variable and compute the Gaussian PDF associated to self.means[c] and self.variances[c]\n",
+    "                #Use a sufficiently large range for the x variable and compute the Gaussian PDF associated to self.means[c] and self.variances[c]\n",
     "                x = np.linspace(self.means[c][i] - 5 * self.variances[c][i], self.means[c][i] + 5 * self.variances[c][i], 250)\n",
     "                y = 1.0 / np.sqrt(2 * np.pi * self.variances[c][i]) * np.exp(-((x - self.means[c][i]) ** 2) / (2 * self.variances[c][i]))\n",
     "\n",
-    "                #Finally, plot all PDF for same feature on the same plot\n",
+    "                #Finally, plot all PDFs for same feature on the same plot\n",
     "                #Note: there might be classes with PDF with small variance on the same plot as others with higher one!\n",
     "                axs[i].plot(x, y, \"--\", label = f\"class: {self.classes[k]}\")\n",
     "                axs[i].set_title(f\"Feature name: {feature_names[i]}\")\n",
@@ -323,8 +323,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "#As you can notice, there are some columns for which the distribution is not really a Gaussian one, like (V22, V1, ...)\n",
-    "#while for some others it is true. "
+    "#As you can notice, there are some columns for which the distribution is not really a Gaussian one, like (V22, V1, ...), while for some others it is true. "
    ]
   },
   {
@@ -333,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Note: in constrant with what have been done for RF, here we don't apply SMOTE because we have observed experimentally that it decreases bothe the recall and the precision on the testing set\n",
+    "#Note: in contrast with what have been done for RF, here we don't apply SMOTE because we have observed experimentally that it decreases both the recall and the precision on the testing set.\n",
     "#If you want to give it a try, uncomment the following\n",
     "#X_smote = fit_resample(X_train[y_train == 1], 2500, 10)\n",
     "\n",
@@ -347,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Another thing that we can try to do is undersampling (we have observed experimentally that it promotes precision with a slight decrease on recall):\n",
+    "#Another thing that we can try to do is undersampling (we have observed experimentally that it promotes precision with a slight decrease on recall)\n",
     "#X_train, y_train = undersample(X_train, y_train, 0, 1 - (sum(y_train) * 300.0 / X_train.shape[0]))"
    ]
   },
