--- a/notebooks/SMOTE.ipynb
+++ b/notebooks/SMOTE.ipynb
@@ -11,11 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SMOTE is the acronym of *\"Synthetic Minority Oversampling Technique\"* and in the paper is used to face the class imbalance problem. As highlighted by the following cell, only $492$ of the total $284807$ transactions are fraudolent ($0.172\\%$). \n",
+    "SMOTE is the acronym of *\"Synthetic Minority Oversampling Technique\"* and in the paper is used to face the class imbalance problem. As highlighted by the following cell, only $492$ of the total $284807$ transactions are frauds ($0.172\\%$). \n",
     "This imbalance can lead to models being biased toward the majority class, so that fraudulent transactions (minority class) may be overshadowed by the legitimate ones.\n",
     "\n",
-    "One solution could be duplicating samples during training: with this, tough, the model could not improve its model.  \n",
-    "Viceversa, SMOTE, generates synthetic samples by interpolating between existing minority samples and their nearest neighbors in feature space. Thus, it moves the decision boundary closer to the majority class while maintaining the diversity of the minority class distribution: for example, if $x_i$ and $x_{j}$ are closely clustered minority samples, the synthetic sample $x_{\\text{synthetic}}$ lies on the line connecting them, ensuring it represents the local structure of the minority class.\n",
+    "SMOTE generates synthetic samples by interpolating between existing minority samples and their nearest neighbors in feature space. Thus, it moves the decision boundary closer to the majority class while maintaining the diversity of the minority class distribution: for example, if $x_i$ and $x_{j}$ are closely clustered minority samples, the synthetic sample $x_{\\text{synthetic}}$ lies on the line connecting them, so it represents the local structure of the minority class.\n",
     "\n",
     "\n",
     "The algorithm is the following:\n",
@@ -28,12 +27,12 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "& S \\leftarrow [\\,\\,] \\quad \\text{//Initialize an empty set of synthetic samples} \\\\\n",
+    "& S \\leftarrow [\\,\\,]  \\\\\n",
     "& \\text{for each } x_i \\in M: \\\\\n",
-    "& \\quad \\text{neigh} \\leftarrow \\text{Neighbors}(x_i, k + 1) \\quad \\text{//Find $k+1$ neighbors of $x_i$} \\\\\n",
+    "& \\quad \\text{neigh} \\leftarrow \\text{Neighbors}(x_i, k + 1)  \\\\\n",
     "& \\quad \\text{Choose one } x_j \\text{ from neigh randomly}\\\\\n",
-    "& \\quad x_{\\text{synthetic}} = x_i + \\lambda (x_j - x_i), \\quad //\\text{Generate a new sample with } \\lambda \\sim U(0, 1) \\\\\n",
-    "& \\quad S = S + x_{\\text{synthetic}} \\quad \\text{//Add the synthetic sample to the set} \\\\\n",
+    "& \\quad x_{\\text{synthetic}} = x_i + \\lambda (x_j - x_i),  \\\\\n",
+    "& \\quad S = S + x_{\\text{synthetic}}  \\\\\n",
     "\n",
     "\\\\\n",
     "& \\text{Return } \\, S\n",
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +50,8 @@
      "output_type": "stream",
      "text": [
       "Number of samples: 284807\n",
-      "Number of fraudolent transaction: 492\n",
-      "Ratio of fraudolent transaction: 0.001727485630620034\n"
+      "Number of fraudulent transaction: 492\n",
+      "Ratio of fraudulent transaction: 0.001727485630620034\n"
      ]
     }
    ],
@@ -62,8 +61,8 @@
     "\n",
     "data = pd.read_csv(\"../creditcard_2021.csv\")\n",
     "print(f\"Number of samples: {len(data)}\")\n",
-    "print(f\"Number of fraudolent transaction: {(data['Class'] == 1).sum()}\")\n",
-    "print(f\"Ratio of fraudolent transaction: {data['Class'].mean()}\")"
+    "print(f\"Number of fraudulent transaction: {(data['Class'] == 1).sum()}\")\n",
+    "print(f\"Ratio of fraudulent transaction: {data['Class'].mean()}\")"
    ]
   },
   {
@@ -96,7 +95,7 @@
     "def generate_synthetic_samples(X_minority, n_samples, indices):\n",
     "    \"\"\"\n",
     "        This is an helper function that is used to generate synthetic samples using the SMOTE algorithm.\n",
-    "        It's JIT-compiled, and the `indices` argument is marked as a static argument for performance.\n",
+    "        It's JIT-compiled, and the \"indices\" argument is marked as a static argument for performance.\n",
     "        \n",
     "        Args:\n",
     "            X_minority: array of minority class samples (input feature vectors).\n",
@@ -129,7 +128,7 @@
     "    key, subkey3 = random.split(key)\n",
     "    gaps = random.uniform(subkey3, (n_samples, 1))\n",
     "\n",
-    "    #Place the syntetic point by interpolating between the selected sample and its neighbor\n",
+    "    #Place the synthetic point by interpolating between the selected sample and its neighbors\n",
     "    diffs = selected_neighbors - selected_samples\n",
     "    synthetic = selected_samples + gaps * diffs\n",
     "\n",
@@ -214,7 +213,7 @@
     }
    ],
    "source": [
-    "#Rember that the array returned by the method is (target_n, 31), so you will need to add the starting rows (the ones with label == 1)\n",
+    "#Remember that the array returned by the method is (target_n, 31), so you will need to add the starting rows (the ones with label == 1)\n",
     "synthetic.shape"
    ]
   },
