Fixed other typos

--- a/notebooks/Naive Bayes.ipynb
+++ b/notebooks/Naive Bayes.ipynb
@@ -16,9 +16,8 @@
     "Conditional independence assumptions hold in our dataset since the correlation of all possible pairs of features is almost zero, except for `Amount` and `Time`. It's possible to apply PCA again to have a perfectly independent set of features.\n",
     "\n",
     "With this hypothesis, we can write $P\\{X|Y\\}$ like:\n",
-    "$$P\\{X|Y\\}=P\\{X_1, X_2, \\dots, X_n|Y\\}=\\frac{P\\{X_1, \\dots,X_n\\}}{P\\{Y\\}}=\\frac{P\\{X_1, \\dots, X_n, Y\\}}{P\\{X_2, \\dots, Y\\}}\\cdot \\frac{P\\{X_2, \\dots, X_n, Y\\}}{P\\{Y\\}}=\n",
-    "\\\\\n",
-    "P\\{X_1|X_2,\\dots,Y\\}\\cdot P\\{X_2, \\dots X_n|Y\\}=P\\{X_1|Y\\}\\cdot P\\{X_2|Y\\}\\cdots P\\{X_n|Y\\}=\\prod_{i=1}^n P\\{X_i|Y\\}$$\n",
+    "$$P\\{X|Y\\}=P\\{X_1, X_2, \\dots, X_n|Y\\}=\\frac{P\\{X_1, \\dots,X_n\\}}{P\\{Y\\}}=\\frac{P\\{X_1, \\dots, X_n, Y\\}}{P\\{X_2, \\dots, Y\\}}\\cdot \\frac{P\\{X_2, \\dots, X_n, Y\\}}{P\\{Y\\}}=$$\n",
+    "$$P\\{X_1|X_2,\\dots,Y\\}\\cdot P\\{X_2, \\dots X_n|Y\\}=P\\{X_1|Y\\}\\cdot P\\{X_2|Y\\}\\cdots P\\{X_n|Y\\}=\\prod_{i=1}^n P\\{X_i|Y\\}$$\n",
     "\n",
     "where we have applied $n$ times the definition of conditional independence and a general property of probabilities.\n",
     "\n",
