--- a/notebooks/Naive Bayes.ipynb
+++ b/notebooks/Naive Bayes.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Applying Naive Bayes on a dataset means estimating $f: X \\rightarrow Y$, or equivalently $P\\{Y|X\\}$, where $Y$ is a random variable and $X$ is a vector containing the attributes. By applying Bayes rule, we see that we can express $P\\{Y=y_i|X=x_i\\}$ as the following:\n",
     "$$P\\{Y=y_i|X=x_k\\}=\\frac{P\\{X=x_k|Y=y_i\\}\\cdot P\\{Y=y_i\\}}{\\sum_jP\\{X=x_k|Y=y_j\\}\\cdot P\\{Y=y_j\\}}$$\n",
-    "where $y_i$ denotes the $i\\text{-th}$ possible value of $Y$ and $x_k$ denotes the $k\\text{-th}$ possible vector value for $X$. One way to learn $P\\{Y|X\\}$ is to use the training data to estimate $P\\{X|Y\\}$ and $P\\{Y\\}$: we can then employ them, together with Bayes rule above, to determine $P\\{Y|X=x_k\\}$ for any new instance $x_k$. A classifier like this will output the probability distribution over all possible values of $Y$ for each new instance $X$ that we ask it to classify. As in DT and RF, there is no need to be perform standardization: it's internally done by the method.\n",
+    "where $y_i$ denotes the $i\\text{-th}$ possible value of $Y$ and $x_k$ denotes the $k\\text{-th}$ possible vector value for $X$. One way to learn $P\\{Y|X\\}$ is to use the training data to estimate $P\\{X|Y\\}$ and $P\\{Y\\}$: we can then employ them, together with Bayes rule above, to determine $P\\{Y|X=x_k\\}$ for any new instance $x_k$. A classifier like this will output the probability distribution over all possible values of $Y$ for each new instance $X$ that we ask it to classify. As in DT and RF, there is no need to perform standardization: it's internally done by the method.\n",
     "\n",
     "Using a Bayes classifier to accurately estimate $P\\{X|Y\\}$ typically requires a lot of training examples. To overcome this problem, Naive Bayes classifiers assumes that each $X_i$ is conditionally independent of each of the others $X_k$ given the label $Y$ and also independent of each subset of the others $X_k$ given $Y$. Given three sets of random variable $X$, $Y$ and $Z$, we say that $X$ is conditionally independent of $Y$ given $Z$, if and only if the probability distribution governing $X$ is independent of the value of $Y$ given $Z$; that is:\n",
     "$$P\\{X=x_i|Y=y_j, Z=z_k\\}=P\\{X=x_i|Z=z_k\\} \\,\\,\\,\\,\\, \\forall i, j, k$$\n",
@@ -23,10 +23,10 @@
     "\n",
     "---\n",
     "\n",
-    "Naive Bayes algorithm works the same for attributes $X$ being either discrete or real-valued. The expression for the probability that $Y$ will take on its $k\\text{-th}$ possible value (i.e. the posterior probability) is:\n",
+    "Naive Bayes algorithm works the same for attributes $X$ being either discrete or real-valued. The expression for the probability that $Y$ will take its $k\\text{-th}$ possible value (i.e. the posterior probability) is:\n",
     "$$P\\{Y=y_k|X_1,\\dots,X_n\\}=\\frac{P\\{X_1, \\dots,X_n|Y=y_k\\}\\cdot P\\{Y=y_k\\}}{\\sum_jP\\{X_1,\\dots,X_n|Y=y_j\\}\\cdot P\\{Y=y_j\\}}$$\n",
     "\n",
-    "where the sum is taken over all possible values $y_j$ os $Y$. By what have been previously said about conditional independence, we can rewrite the expression as:\n",
+    "where the sum is taken over all possible values $y_j$ os $Y$. By what have previously said about conditional independence, we can rewrite the expression as:\n",
     "$$P\\{Y=y_k|X_1,\\dots,X_n\\}=\\frac{P\\{Y=y_k\\}\\cdot \\prod_i P\\{X_i|Y=y_k\\}}{\\sum_j P\\{Y=y_j\\}\\cdot \\prod_i P\\{X_i|Y=y_i\\}}$$\n",
     "\n",
     "that is the fundamental equation for the Naive Bayes classifier; $P\\{Y\\}$ (the prior) and $P\\{X_i|Y\\}$ (the likelihood) have been already estimated. \n",
