--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,27 +590,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"criterion\" : \"giny\", \n",
+    "    \"criterion\" : \"gini\", \n",
     "    \"max_depth\" : 10, \n",
-    "    \"min_samples_split\" : 50, \n",
-    "    \"min_samples_leaf\" : 25, \n",
-    "    \"min_impurity_decrease\" : 1e-5, \n",
+    "    \"min_samples_split\" : 2, \n",
+    "    \"min_samples_leaf\" : 1, \n",
+    "    \"min_impurity_decrease\" : 1e-7, \n",
     "    \"max_thresholds\" : 20, \n",
     "    \"max_features\" : None,\n",
     "    \"random_state\" : 0\n",
     "}\n",
     "\n",
-    "ga = GeneticAlgorithm(1.0, 90, range(X.shape[1]), 15, 0.05, 0.7, 2, (DecisionTree, params), lambda x, y: f1_score(x, y))"
+    "ga = GeneticAlgorithm(1.0, 90, range(X.shape[1]), 15, 0.05, 0.7, 2, (DecisionTree, params), lambda x, y: accuracy(x, y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
       "Current generation: 0\n",
       "Current generation: 5\n",
       "Current generation: 10\n",
-      "Best feature vector: ['V2', 'V3', 'V5', 'V6', 'V7', 'V11', 'V12', 'V13'], with fitness 0.8308823529411764\n"
+      "Best feature vector: ['V2', 'V6', 'V7', 'V8', 'V9', 'V10', 'V12', 'V14', 'V15', 'V16', 'V21', 'V23', 'V26', 'V27', 'V28'], with fitness 0.9994499256814484\n"
      ]
     }
    ],
