--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -30,7 +30,7 @@
     "*   $\\mathbf{x}^{(l)}$  is the output after activation\n",
     "\n",
     "#### ***Activation functions***\n",
-    "The **activation function** it's used for introducing non-linearity into the model, allowing the network to learn and represent complex patterns in the data. Without this non-linearity feature, a neural network would behave like a linear regression model, no matter how many layers it has.\n",
+    "The **activation function** is used for introducing non-linearity into the model, allowing the network to learn and represent complex patterns in the data. Without this non-linearity feature, a neural network would behave like a linear regression model, no matter how many layers it has.\n",
     "\n",
     "##### ***Common functions***\n",
     "1.  **Sigmoid function** ( maps values into the range (0, 1) ):\n",
@@ -59,7 +59,7 @@
     "$$\n",
     "*   **Cross-Entropy Loss** (good for classification tasks):\n",
     "$$\n",
-    "J_{x-entropy} = -\\frac{1}{N} \\sum_i^N y_i \\log(y_{pred,i}) + (1 - y_i) \\log(1 - y_{pred,i})\n",
+    "J_{x-entropy} = -\\frac{1}{N} \\sum_i^N y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i)\n",
     "$$\n",
     "\n",
     "#### ***Backpropagation Algorithm***\n",
