Update ANN and modify GA

--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "id": "100ab18fdba75f1b",
    "metadata": {
     "ExecuteTime": {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "class ANN(BaseModel):\n",
-    "    def __init__(self, layers_size=None, act_func=jnp.tanh, out_act_fun=jax.nn.sigmoid):\n",
+    "    def __init__(self, layers_size=None, act_func=jnp.tanh, out_act_func=jax.nn.sigmoid):\n",
     "        \"\"\"\n",
     "        A class representing an artificial neural network configuration for specifying the structure\n",
     "        and activation functions of each layer in the network.\n",
@@ -149,14 +149,14 @@
     "            of the neural network. Defaults to hyperbolic tangent (jnp.tanh).\n",
     "        :type act_func: Callable\n",
     "\n",
-    "        :param out_act_fun: Activation function to be applied to the output layer of the\n",
+    "        :param out_act_func: Activation function to be applied to the output layer of the\n",
     "            neural network. Defaults to sigmoid (jax.nn.sigmoid).\n",
-    "        :type out_act_fun: Callable\n",
+    "        :type out_act_func: Callable\n",
     "        \"\"\"\n",
     "\n",
     "        self.layers_size = layers_size\n",
     "        self.act_func = act_func\n",
-    "        self.out_act_fun = out_act_fun\n",
+    "        self.out_act_func = out_act_func\n",
     "\n",
     "    def initialize_parameters(self, layers_size):\n",
     "        \"\"\"\n",
@@ -622,7 +622,7 @@
     "\n",
     "        # On the output layer it is applied the sigmoid function\n",
     "        # since the output is needed to be between 0 and 1\n",
-    "        layer = self.out_act_fun(layer)\n",
+    "        layer = self.out_act_func(layer)\n",
     "        layer = layer.T\n",
     "\n",
     "        return layer"
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "id": "c4794e10",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "id": "473f8995aee30b86",
    "metadata": {
     "ExecuteTime": {
@@ -680,7 +680,7 @@
    "outputs": [],
    "source": [
     "# Artificial neural network\n",
-    "ann = ANN(act_func=jnp.tanh, out_act_fun=jax.nn.sigmoid)"
+    "ann = ANN(act_func=jnp.tanh, out_act_func=jax.nn.sigmoid)"
    ]
   },
   {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "id": "a7f4d567248d9564",
    "metadata": {
     "ExecuteTime": {
