--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,15 +137,18 @@
     "from utils.models.RandomForest import *\n",
     "from utils.models.DecisionTree import *\n",
     "from utils.models.NaiveBayes import *\n",
+    "from utils.models.ANN import *\n",
+    "from utils.models.LogisticRegression import *\n",
     "\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
-    "from utils.model_evaluation import accuracy"
+    "from utils.model_evaluation import accuracy\n",
+    "from utils.data_processer import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +201,53 @@
     "        #Note: in some cases (like RF) a tradeoff between performance and model capabilities has to be chosen: this might impact on the computed features vector!\n",
     "        inst = self.model(**self.model_params)\n",
     "        \n",
-    "        inst.fit(X_train, y_train)\n",
+    "        if self.model is ANN:\n",
+    "            params = inst.initialize_parameters([X_train.shape[1], 30, 20, 1])\n",
     "\n",
-    "        y_pred, _ = inst.predict(X_test)\n",
+    "            updated_params, _ = inst.fit(\n",
+    "                X=X_train, \n",
+    "                y=y_train[:, None], \n",
+    "                params=params,    \n",
+    "                optimizer=inst.RMSprop(\n",
+    "                    loss_function=inst.regularized_loss(\n",
+    "                        inst.cross_entropy(),\n",
+    "                        penalization=0.5\n",
+    "                    ),\n",
+    "                    epochs=2000,\n",
+    "                    batch_size=256,\n",
+    "                    learning_rate=0.001,\n",
+    "                    decay_rate=0.9,\n",
+    "                    epsilon=1e-8,\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "            y_pred = inst.predict(X_train, updated_params)\n",
+    "        elif self.model is LogisticRegression:\n",
+    "            weights, bias = inst.initialize_parameters(X_train_curr.shape[1])\n",
+    "\n",
+    "            updated_weights, updated_bias, _ = inst.fit(\n",
+    "                X=X_train,\n",
+    "                y=y_train[:, None],\n",
+    "                weights=weights,\n",
+    "                bias=bias,\n",
+    "                optimizer=inst.RMSprop(\n",
+    "                    loss_function=inst.regularized_loss(\n",
+    "                        inst.cross_entropy(),\n",
+    "                        penalization=0.5\n",
+    "                    ),\n",
+    "                    epochs=7500,\n",
+    "                    batch_size=4096,\n",
+    "                    learning_rate=0.001,\n",
+    "                    decay_rate=0.9,\n",
+    "                    epsilon=1e-8,\n",
+    "                )\n",
+    "            )\n",
+    "            \n",
+    "            y_pred = inst.predict(X_train, updated_weights, updated_bias)\n",
+    "        else:\n",
+    "            inst.fit(X_train, y_train)\n",
+    "\n",
+    "            y_pred, _ = inst.predict(X_test)\n",
     "\n",
     "        return self.fit_funct(y_pred, y_test)\n",
     "\n",
@@ -414,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,14 +471,14 @@
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "from utils.preprocessing import undersample\n",
+    "from utils.preprocessing import *\n",
     "\n",
     "from utils.model_evaluation import accuracy, recall, precision, f1_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,27 +520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current generation: 0\n",
-      "Current generation: 5\n",
-      "Current generation: 10\n",
-      "Current generation: 15\n",
-      "Current generation: 20\n",
-      "Current generation: 25\n",
-      "Current generation: 30\n",
-      "Current generation: 35\n",
-      "Current generation: 40\n",
-      "Current generation: 45\n",
-      "Best feature vector: ['Time', 'V4', 'V9', 'V11', 'V16', 'V17', 'V18', 'V24', 'V26', 'V27'], with fitness 0.9988413328183702\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train_nb_1, y_train_nb_1 = X_train, y_train\n",
     "\n",
@@ -503,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,17 +596,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current generation: 0\n",
-      "Current generation: 5\n",
-      "Current generation: 10\n",
-      "Best feature vector: ['Time', 'V2', 'V4', 'V10', 'V11', 'V12', 'V13', 'V14', 'V16', 'V17', 'V21', 'V24', 'V25', 'Amount'], with fitness 0.9995786664794073\n"
+      "Current generation: 0\n"
      ]
     }
    ],
@@ -610,25 +636,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current generation: 0\n",
-      "Current generation: 5\n",
-      "Current generation: 10\n",
-      "Best feature vector: ['V2', 'V6', 'V7', 'V8', 'V9', 'V10', 'V12', 'V14', 'V15', 'V16', 'V21', 'V23', 'V26', 'V27', 'V28'], with fitness 0.9994499256814484\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train_dt, y_train_dt = undersample(X_train, y_train, 0, 0.5)\n",
     "\n",
     "best_feats_dt, max_fit_dt, feats_hist_dt, fit_hist_dt = ga.run(X_train_dt, y_train_dt, X_test, y_test)\n",
     "print(f\"Best feature vector: {ga.decode(best_feats_dt)}, with fitness {max_fit_dt}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "params = {\n",
+    "    \"act_func\": jnp.tanh,\n",
+    "    \"out_act_func\": jax.nn.sigmoid,\n",
+    "}\n",
+    "\n",
+    "ga = GeneticAlgorithm(1.0, 50, range(X.shape[1]), 50, 0.05, 0.7, 2, (ANN, params), lambda x, y: accuracy(x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data\n",
+    "X_train, y_train, _, _, X_test, y_test = data_split(data.to_numpy(), train_size=0.8)\n",
+    "\n",
+    "# Number of samples to generate\n",
+    "n_samples = 3000\n",
+    "\n",
+    "# Minority: fraudulent samples\n",
+    "X_minority = X_train[y_train[:, 0] == 1]\n",
+    "\n",
+    "# Apply SMOTE (only on the training set)\n",
+    "X_smote = fit_resample(X_minority, n_samples, k=15)\n",
+    "y_smote = jnp.ones((n_samples, 1))\n",
+    "\n",
+    "# Add synthetic data to the training set\n",
+    "X_train = jnp.concatenate((X_train, X_smote), axis=0)\n",
+    "y_train = jnp.concatenate((y_train, y_smote), axis=0)\n",
+    "\n",
+    "# Normalize training set\n",
+    "X_train_normalized, data_train_min, data_train_max = min_max(X_train)\n",
+    "\n",
+    "# Normalize testing set\n",
+    "X_test_normalized, _, _ = min_max(X_test, data_train_min, data_train_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "best_feats_ann, max_fit_ann, feats_hist_ann, fit_hist_ann = ga.run(X_train_normalized, y_train, X_test_normalized, y_test)\n",
+    "print(f\"Best feature vector: {ga.decode(best_feats_ann)}, with fitness {max_fit_ann}\")"
    ]
   },
   {
